# Copyright © 2024 Lunarbase (https://lunarbase.ai/) <contact@lunarbase.ai>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "lunarcore"

[tool.poetry]
name = "lunarcore"
version = "0.1.0"
description = "Expert AI agent orchestration platform."
authors = ["lunarbase.ai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
autoimport = ">=1.4.0"
black = ">=24.2.0"
elasticsearch = ">=8.12.1"
fastapi = ">=0.110.0"
langchain = ">=0.1.9"
langchainhub = "^0.1.15"
langchain-core = ">=0.1.27"
langchain-experimental = "^0.0.55"
langchain-openai = ">=0.0.8"
networkx = ">=3.2.1"
prefect = ">=2.16.0, <3.0.0"
protobuf = ">=4.25.3"
pydantic = ">=2.6.2"
pydantic-settings = ">=2.2.1"
pymilvus = ">=2.3.6"
scipy = "^1.12.0"
python-dotenv = ">=1.0.1"
requirements-parser = ">=0.5.0"
s3fs = ">=2024.2.0"
SPARQLWrapper = ">=2.0.0"
Sphinx = ">=7.2.6"
SQLAlchemy = ">=2.0.27"
typer = ">=0.9.0"
uvicorn = ">=0.28.0"
Whoosh = ">=2.7.4"
setuptools = ">=69.1.1"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.6"
numpy = ">=1.26.4"
urllib3 = "<2"
pyarrow = "<=15.0.0"
gitpython = "^3.1.43"
orjson = "^3.10.3"
jupyterlab = "^4.2.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lunarcore = "lunarcore.cli:app"
