# Copyright © 2024 Lunarbase (https://lunarbase.ai/) <contact@lunarbase.ai>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "lunarcore"

[tool.poetry]
name = "lunarcore"
version = "0.1.11"
description = "Expert AI agent core library."
authors = ["lunarbase.ai"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=2.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
black = ">=24.2.0"
isort = ">=5.13.2"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.6"